everything done except some errors

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
 				"-Wextra",
 				"-Werror",
 				"-pedantic",
+				"-pthread",
 				"${file}",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
